
syntax = "proto3";
package candlestick;

option go_package = "github.com/ramasbeinaty/trading-chart-service/proto/candlestick/contracts";

import "proto/candlestick/contracts/models.proto";

import "proto/google/api/annotations.proto";

service CandlestickService {
    rpc SubscribeToCandlesticks(SubscribeToStreamRequest) returns (stream Candlestick) {
        option (google.api.http) = {
            get: "/api/v1/candlestick/subscribe"
            additional_bindings {
                get: "/api/v1/candlestick/subscribe?symbol={symbol}"
            }
        };
    }
    rpc UnsubscribeFromCandlesticks(UnsubscribeFromStreamRequest) returns (GenericResponse) {
        option (google.api.http) = {
            delete: "/api/v1/candlestick/unsubscribe"
            body: "*"
        };
    }
}